tests/models/enum/unnamed/f64/pass/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2.0)]
        f64
    ),
}
fn main() {}
