tests/models/enum/unnamed/f64/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        f64
    ),
}
fn main() {}
